--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^11.5.0",
     "frontend": "file:",
     "react-hook-form": "^7.55.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
