--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "frontend": "file:",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^7.4.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
