--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "dotenv": "^16.4.7",
     "firebase": "^11.5.0",
     "frontend": "file:",
+    "react-datepicker": "^8.3.0",
     "react-hook-form": "^7.55.0",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^7.4.0",
+    "react-tag-autocomplete": "^7.5.0",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1"
   },
