--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "cloudinary-core": "^2.13.1",
     "dotenv": "^16.4.7",
     "firebase": "^11.5.0",
     "frontend": "file:",
