--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "chart.js": "^4.4.9",
     "cloudinary-core": "^2.13.1",
     "dotenv": "^16.4.7",
     "firebase": "^11.5.0",
     "frontend": "file:",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.3.0",
     "react-hook-form": "^7.55.0",
     "react-phone-number-input": "^3.4.12",
